# libdeflate-hs

./: CHANGELOG.md  LICENSE  README.md  libdeflate-hs.cabal  update-c-sources.sh
benchmarks/: Benchmarks.hs  chinookFullIntrospection-20k-truncated.json  chinookFullIntrospection.json  chinookSimpleQuery.json
src/Codec/Compression/LibDeflate/: GZip.hsc
test/: Main.hs
